--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"@apollo/react-hooks": "^4.0.0",
 		"apollo-boost": "^0.4.9",
+		"graphql": "^15.4.0",
 		"if-env": "^1.0.4"
 	},
 	"devDependencies": {
